// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Separator > Default > renders correctly 1`] = `
<jest>
  <hr
    class="ecl-separator"
  />
</jest>
`;

exports[`Separator > Default > renders correctly with extra attributes 1`] = `
<jest>
  <hr
    class="ecl-separator"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  />
</jest>
`;

exports[`Separator > Default > renders correctly with extra class names 1`] = `
<jest>
  <hr
    class="ecl-separator custom-class custom-class--test"
  />
</jest>
`;
